test/e2e/testdata/weighted-zones.yaml
apiVersion: v1
kind: Service
metadata:
  name: weighted-zones-backend
  namespace: gateway-conformance-infra
spec:
  selector:
    app: weighted-zones-backend
  ports:
    - protocol: TCP
      port: 8080
      name: http11
      targetPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weighted-zones-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /weighted-zones
      backendRefs:
        - name: weighted-zones-backend
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: weighted-zones-policy
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: weighted-zones-route
  loadBalancer:
    type: RoundRobin
    zoneAware:
      weightedZones:
        - zone: "1"
          weight: 80
        - zone: "2"
          weight: 20
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weighted-zones-backend-zone1
  namespace: gateway-conformance-infra
  labels:
    app: weighted-zones-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weighted-zones-backend
      zone: "1"
  template:
    metadata:
      labels:
        app: weighted-zones-backend
        zone: "1"
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: "1"
      containers:
        - name: weighted-zones-backend
          # From https://github.com/kubernetes-sigs/gateway-api/blob/main/conformance/echo-basic/echo-basic.go
          image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.1.0
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: weighted-zones-backend
          resources:
            requests:
              cpu: 10m
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weighted-zones-backend-zone2
  namespace: gateway-conformance-infra
  labels:
    app: weighted-zones-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weighted-zones-backend
      zone: "2"
  template:
    metadata:
      labels:
        app: weighted-zones-backend
        zone: "2"
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: "2"
      containers:
        - name: weighted-zones-backend
          # From https://github.com/kubernetes-sigs/gateway-api/blob/main/conformance/echo-basic/echo-basic.go
          image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.1.0
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: weighted-zones-backend
          resources:
            requests:
              cpu: 10m
